# uniswap-portia-project

./: .env.example  README.md  pyproject.toml  requirements.txt  run.sh
examples/: 1_basic_demo.py  2_advanced_demo.py
src/: __init__.py  config.py  custom_tool.py  log_viewer.py  main.py  streamlit_app.py  uniswap_trader.py
src/examples/: trade_example.py
src/uniswap_portia_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_custom_tool.py  test_main.py
