[project]
name = "uniswap-portia-pipeline"
version = "0.1.0"
description = "A pipeline that uses Portia to query Uniswap data and produce presentations or outputs."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "portia-sdk-python @ file:///home/simrat12/portia-sdk-python",
  "requests",
  "streamlit",
  # add more if needed
]

[build-system]
requires = ["setuptools", "wheel"]
